<resources>
    <string name="app_name">WeatherAnalyzer</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="headerCityName">City Name</string>
    <string name="headerCurrentHighTemp">Curr High</string>
    <string name="headerCurrentLowTemp">Curr Low</string>
    <string name="headerHistoricalHighTemp">High Temp</string>
    <string name="headerHistoricalLowTemp">Hist Low</string>
    <string name="headerDiffHighTemp">Diff High</string>
    <string name="headerDiffLowTemp">Diff Low</string>
</resources>